err/products.zopenarchives.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ZOpenArchives'...
Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/MetadataAware.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/MetadataAware.py", line 345
    print "tag not found"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/ZCatalogHarvester.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/ZCatalogHarvester.py", line 250
    print "Error process_Autopublish: referenced object not found in catalog", item.id
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/ZCatalogHarvester4eXist.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/ZCatalogHarvester4eXist.py", line 303
    print "Error process_Autopublish: referenced object not found in catalog", item.id
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/ZOpenArchives/css'...
Listing './lib/python3.5/site-packages/Products/ZOpenArchives/dtml'...
Listing './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH'...
Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIHarvester.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIHarvester.py", line 225
    raise "incorrect seciton for siteStatus ", section
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIRecord.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIRecord.py", line 139
    print "ERROR in get_DOM: missing attr ", select
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIRepository.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/OAIRepository.py", line 164
    raise BadVerb, "OAI Request Error: missing 'verb' parameter"
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/test.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/test.py", line 15
    print r1.status, r1.reason
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/timeoutsocket.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/pyOAIMH/timeoutsocket.py", line 192
    except Error, why:
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ZOpenArchives/www'...
Listing './lib/python3.5/site-packages/Products/ZOpenArchives/xsl'...
Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistHarvester.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistHarvester.py", line 225
    raise "no header in", dom.toxml(self.default_decoding)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistRepository.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistRepository.py", line 490
    raise IdDoesNotExist, "OAI Error: idDoesNotExist"
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistToken.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIExistToken.py", line 96
    print "get_RequestArgs", self.request_args
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIHarvester.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIHarvester.py", line 139
    raise "no header in", dom.toxml(self.default_decoding)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIRecord.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIRecord.py", line 454
    print "------------------------------"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ZOpenArchives/zOAIRepository.py'...
***   File "./lib/python3.5/site-packages/Products/ZOpenArchives/zOAIRepository.py", line 312
    raise "Unknown granularity: '%s'", granularity
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.ZOpenArchives-1.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
